package com.neusoft.eldercare.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.neusoft.eldercare.entity.Bed;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface BedMapper extends BaseMapper<Bed> {
}
