package com.neusoft.eldercare.mapper;

import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import com.neusoft.eldercare.entity.Customer;
import org.apache.ibatis.annotations.Mapper;

@Mapper
public interface CustomerMapper extends BaseMapper<Customer> {
}
